<resources>
    <string name="app_name">God Chat</string>
    <!--LoginPage Activity-->
    <string name="project_name">Project God Chat</string>
    <string name="Login_Btn">Login</string>
    <string name="LoginAnounymous_Btn">Anonymous Login</string>
    <string name="forget_pass"><u><b>Forgot your password?</b></u></string>
    <string name="empty_username_pass">Please enter your username and password</string>
    <string name="register_text"><u>Don\'t have an account? Register</u>s</string>
    <string name="Signing_in">Signing in...</string>
    <string name="Signing_out">Signing out...</string>
    <string name="Logout">Logout</string>
    <string name="Unable_to_sign_in">Unable to sign in. Please check your username or password</string>
    <!--Register Activity-->
    <string name="InputFirstName">Input First Name</string>
    <string name="InputLastName">Input Last Name</string>
    <string name="InputUserName">Input Username</string>
    <string name="InputPassword">Input Password</string>
    <string name="InputDOB">Input Date Of Birth</string>
    <string name="InputEmail">Input Email</string>
    <string name="RepeatEmail">Repeat Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="add_image">Add image</string>
    <!--Getting Started Alternative 1,2,3 Activity-->
    <string name="welcome_msg1">Inspired by communication app, connecting people via internet such as Zalo, Messenger, etc. GodChat Project was born in order to connecting people with better effiency.</string>
    <string name="welcome_msg2">With improved anonymous login features and Dark Mode support for those with weak eyes, Godchat is the best choice in Vietnam Internet Community</string>
    <string name="welcome_msg3">Besides good features like real time communicating, Godchat also have the anonymous features to hide real identity of user, so that they can show their true color without worrying about exposing their secret. And Dark Mode is good also.</string>
    <!--Creating account log-->
    <string name="creating_account">Creating account...</string>
    <string name="please_wait">Please wait for a minute...</string>
    <!--Dark Mode Setting Activity-->
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="Use_system_settings">Use system settings</string>
    <string name="based_on_setting">We\'ll adjust your appearance based on your device\'s system.</string>

    <!--Setting Activity-->
    <string name="acc_setting">Account Setting</string>
    <string name="manage_info">Manage information about you and your account in general</string>
    <string name="acc_owner">Notification</string>
    <string name="Personal_account_information">Personal account information</string>
    <string name="pass_security">Password and security</string>
    <string name="Privacy_Setting">Privacy Setting</string>
    <string name="control_privacy">Control your own privacy, who can see what you post</string>
    <string name="Stories">Stories</string>
    <string name="Profil_Information">Profile Information</string>
    <string name="Profile_and_tagging">Profile and tagging</string>
    <string name="pictures">Pictures</string>
    <string name="Contents">Contents</string>
    <string name="Preferences_Setting">Preferences Setting</string>
    <string name="Customize_your_own">Customize your own experience</string>
    <string name="Dark_mode">Dark Mode</string>
    <string name="Shortcut">Shortcut</string>
    <string name="Language">Language</string>
    <string name="Update_App">App Update</string>
    <!--Language Activity-->
    <string name="vietnamese_lang">Vietnamese</string>
    <string name="english_lang">English</string>
    <!--Notification Activity-->
    <string name="ringtone">Ringtone</string>
    <string name="customize_noti">Customise notifications</string>
    <string name="customize_noti_sub">Sounds and appearance options</string>
    <string name="notification_preview">Notification preview</string>
    <string name="notification_preview_sub">Show name and message</string>
    <string name="new_friend_noti">New friend notification</string>
    <string name="new_friend_noti_sub">Get a new chat thread when you add new friend</string>
    <string name="vibrate">Vibration</string>
    <string name="vibrate_sub">Vibration on call</string>
    <string name="inapp_sounds">In-app sounds</string>
    <string name="inapp_sounds_sub">Enable in-app sounds</string>
    <!--Personal Account Information Activity-->
    <string name="Full_Name">Full Name</string>
    <string name="Contact_Info">Contact Info</string>
    <string name="Contact_Info_Sub">Manage your phone numbers and email addresses</string>
    <string name="Identity_Confirmation">Identity Confirmation</string>
    <string name="Identity_Confirmation_Sub">Confirm your identity on Godchat</string>
    <!--Fullname Setting Activity-->
    <string name="First_Name">First Name</string>
    <string name="Middle_Name">Middle Name</string>
    <string name="Family_Name">Family Name</string>
    <string name="Please_Note"><b>Please Note:</b> If you change your name here, you can not change it again for 15 days. Please be aware, your name will have to comply to community standards</string>
    <string name="Commit_Change">Commit Change</string>
    <string name="Cancel">Cancel</string>
    <!--Password and Security Setting Activity-->
    <string name="Change_Password">Change Password</string>
    <string name="Change_Password_Sub">It is good idea to use a strong password that you do not use elsewhere</string>
    <string name="Saved_Login">Save Login Information</string>
    <string name="Saved_Login_Sub">This option will save your login so you can quickly login</string>
    <!--Change Password Setting Activity-->
    <string name="Current_password">Current Password</string>
    <string name="New_password">New Password</string>
    <string name="Retype_New_password">Retype New Password</string>
    <!--Identity Confirmation Setting Activity-->
    <string name="ID_Confirmation_Notice">You might be asked to provided proof of your identity. This is to help us ensure that Godchat is a safe place for outr whole community</string>
    <string name="confirm">Confirm</string>
    <!--Update App Setting Activity-->
    <string name="auto_update">Auto-update Godchat</string>
    <string name="auto_update_sub">Automatically update app over Wifi</string>
    <string name="update_available">Update Notification</string>
    <string name="update_available_sub">Get notified when updates are available</string>
    <!--Stories Setting Activity-->
    <string name="who_can_see_your_stories">Who can see your story?</string>
    <string name="who_can_see_your_stories_sub">Your story will be visible for 24 hours</string>
    <string name="Public">Public</string>
    <string name="Public_sub">Anyone can see it</string>
    <string name="Friends_Only">Friends Only</string>
    <string name="Friends_Only_sub">Only your friends can see it</string>
    <string name="Only_Me">Only Me</string>
    <string name="Only_Me_sub">Only you can see it</string>
    <string name="Archive_Stories">Archive Stories</string>
    <string name="Archive_Stories_sub">When turned on, any stories that you post will be saved to a private archive that is only visible to you</string>

    <!--Main Activity-->
    <string name="select_user">Select User</string>
    <string name="error_can_not_load_user">Error. Can not load user. Please check your internet connection</string>
    <string name="save_on_capture">Save on capture</string>
    <string name="save_on_capture_sub">Save new photos that you take in app to your Gallery</string>


</resources>