<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="5dp"
    tools:context=".SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_setting"
                android:textStyle="bold"
                android:textSize="18dp"
                android:id="@+id/tvTitle1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_info"
                android:textSize="16dp"
                android:id="@+id/tvSubtitle1"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc_owner"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnNotification"
                app:icon="@drawable/ownership"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Personal_account_information"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnPersonalAccountMange"
                app:icon="@drawable/personal_information_setting"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_security"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnPasswordManage"
                app:icon="@drawable/password"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Privacy_Setting"
                android:textStyle="bold"
                android:textSize="18dp"
                android:id="@+id/tvTitle2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control_privacy"
                android:textSize="16dp"
                android:id="@+id/tvSubtitle2"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Stories"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnStories"
                app:icon="@drawable/story"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Profil_Information"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnProfileInfo"
                app:icon="@drawable/personal_information_setting"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Profile_and_tagging"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnProfileTag"
                app:icon="@drawable/tags"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Video"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnVideo"
                app:icon="@drawable/video_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pictures"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnPictures"
                app:icon="@drawable/pictures_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/Contents"
                android:textAlignment="textStart"
                android:textColor="@color/cardview_dark_background"
                android:textSize="11dp"
                android:textStyle="bold"
                app:icon="@drawable/content_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Media"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnMedia"
                app:icon="@drawable/media_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Preferences_Setting"
                android:textStyle="bold"
                android:textSize="18dp"
                android:id="@+id/tvTitle3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Customize_your_own"
                android:textSize="16dp"
                android:id="@+id/tvSubtitle3"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dark_mode"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnDarkModeToggle"
                app:icon="@drawable/darkmode_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Shortcut"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnShortCut"
                app:icon="@drawable/shortcut_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="11dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnLanguage"
                app:icon="@drawable/language_icon"
                app:iconSize="18dp"
                app:iconTint="@color/cardview_dark_background"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>