<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="56dp"
            android:layout_height="41dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/cardview_dark_background"
            app:icon="@drawable/left_arrow"
            app:iconSize="14dp"
            app:iconTint="@color/cardview_dark_background"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/acc_owner"
            android:textSize="20dp"
            android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="2dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayoutRingtone"
            android:clickable="true">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ringtone"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="12dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/btnRingtone"
                android:background="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Messenger"
                android:id="@+id/tvRingtone_Sub"
                android:layout_marginTop="-8pt"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayoutNotiPreview"
            android:clickable="true">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_preview"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/swPreviewNoti"
                android:background="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_preview_sub"
                android:layout_marginTop="-6pt"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayoutNewFriendNoti"
            android:clickable="true">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_friend_noti"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/swNewFriendNoti"
                android:background="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_friend_noti_sub"
                android:layout_marginTop="-6pt"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayoutVibrate"
            android:clickable="true">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibrate"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/swVibrate"
                android:background="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_sub"
                android:layout_marginTop="-6pt"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayoutSounds"
            android:clickable="true">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inapp_sounds"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:textColor="@color/cardview_dark_background"
                android:id="@+id/swSounds"
                android:background="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inapp_sounds_sub"
                android:layout_marginTop="-6pt"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>